Fix application page card header on mobile portrait mode

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -230,6 +230,7 @@ footer {
 
 .navbar-nav {
     padding-top: 8px;
+    padding-bottom: 6px;
 }
 
 .nav-item.dropdown {
@@ -635,6 +636,7 @@ footer {
 @media screen and (min-width: 768px) {
     .navbar-nav {
         padding-top: 0;
+        padding-bottom: 0;
         gap: 6px;
     }
 
